<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="全般"
        android:layout="@layout/setting_category">

        <Preference
            android:key="@string/pref_opinion_key"
            android:icon="@drawable/ic_comment_grey_700_24dp"
            android:title="@string/pref_opinion"
            android:layout="@layout/setting_item"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="このアプリについて"
        android:layout="@layout/setting_category">

        <Preference
            android:key="@string/pref_license_key"
            android:icon="@drawable/ic_copyright_grey_700_24dp"
            android:title="@string/pref_license"
            android:layout="@layout/setting_item"/>

        <Preference
            android:key="@string/pref_version_key"
            android:icon="@drawable/ic_info_outline_grey_700_24dp"
            android:title="@string/pref_version"
            android:summary="0"
            android:layout="@layout/setting_item"/>

    </PreferenceCategory>

</PreferenceScreen>